--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,6 @@
 [tools]
-go = "1.25.0"
-task = "3.44.1"
-act = "0.2.80"
-"ubi:psampaz/go-mod-outdated" = "0.9.0"
+go = '1.26.0'
+task = '3.48.0'
+act = '0.2.84'
+'github:psampaz/go-mod-outdated' = '0.9.0'
+'go:github.com/bobg/mingo/cmd/mingo' = '0.15.0'
